--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="red_700">#FF0101</color>
     <color name="red_500">#F44336</color>
+    <color name="crema">#ffffbf</color>
 
 </resources>
