--- a/app/src/main/res/layout/activity_sheet7.xml
+++ b/app/src/main/res/layout/activity_sheet7.xml
@@ -357,11 +357,12 @@
         <EditText
             android:id="@+id/EditOtros"
             android:layout_width="match_parent"
-            android:layout_height="23dp"
+            android:layout_height="wrap_content"
             android:layout_below="@+id/TextNDuplicado"
             android:layout_marginStart="20dp"
             android:layout_marginTop="20dp"
             android:layout_marginEnd="20dp"
+            android:padding="5dp"
             android:layout_toEndOf="@+id/TextPDuplicado"
             android:background="@drawable/style_etbg"
             android:gravity="center"
